--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Rodrigo Palacios">
+  <meta name="description" content="Portafolio de Rodrigo Palacios, que es un desarrollador web freelancer en busca de un trabajo!." >
+  <meta name="keywords" content="HTML, CSS, JavaScript, React, portafolio, fullstack, web developer">
   <!-- CSS only -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
