--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   </main>
   <footer id="footer" class="footer">
     <div class="footer-main">
-      <ul data-aos="fade-down" class="redes">
+      <ul data-aos="fade-right" class="redes">
         <li><i class="bi bi-github"></i><a href="https://www.github.com/SbleitZ" target="_blank">Github</a></li>
         <li><i class="bi bi-linkedin"></i><a href="https://www.linkedin.com/in/sbleit" target="_blank">Linkedin</a></li>
         <li><i class="bi bi-discord"></i>Sbleit#8361</li>
