--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
         <li><i class="bi bi-discord"></i>Sbleit#8361</li>
         <li><i class="bi bi-instagram"></i><a href="">Instagram</a></li>
       </ul>
-      <ul data-aos="fade-up" id="contacto" class="contacto">
+      <ul data-aos="fade-left" id="contacto" class="contacto">
         <li><i class="bi bi-envelope-at"></i><a href="mailto:whatthesbleit@gmail.com">whatthesbleit@gmail.com</a></li>
         <li><i class="bi bi-telephone-forward-fill"></i><a href="">+56 9 XXXXXXXX</a></li>
       </ul>
