--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="-Jpym9ltndPKSK0UiWZi0Zuw2PEinNtetmgCwEpAEmQ" />
   <meta name="author" content="Rodrigo Palacios">
   <meta name="description" content="Portafolio de Rodrigo Palacios, que es un desarrollador web freelancer en busca de un trabajo!." >
   <meta name="keywords" content="HTML, CSS, JavaScript, React, portafolio, fullstack, web developer">
