--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           Mis Proyectos
         </h3>
         <div class="row contenedor-proyectos-row">
-          <article data-aos="fade-up"
+          <article data-aos="fade-right"
           data-aos-offset="100"
           data-aos-easing="ease-in-sine" class="col-12 col-md-4 card-proyect">
             <img class="card-proyect-img img-fluid" alt="icono del proyecto phrasesfy" src="./src/images/proyecto1.png">
@@ -167,7 +167,7 @@
               
             </div>
           </article>
-          <article data-aos="fade-up"
+          <article data-aos="fade-left"
           data-aos-offset="200"
           data-aos-easing="ease-in-sine" class="col-12 col-md-4 card-proyect">
             <img class="card-proyect-img img-fluid" alt="icono del proyecto" src="./src/images/imagen-mantenimiento.jpg">
