add image proyecto 2

--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
           <article data-aos="fade-up"
           data-aos-offset="200"
           data-aos-easing="ease-in-sine" class="col-12 col-md-4 card-proyect">
-            <img class="card-proyect-img img-fluid" alt="icono del proyecto" src="./src/images/imagen-mantenimiento.jpg">
+            <img class="card-proyect-img img-fluid" alt="icono del proyecto de pokereact" src="./src/images/proyecto2.png">
             <div class="card-proyect-item">
               <span>Web</span>
-              <p>Proximamente</p>
-              <a class="proyects-button" href="#">
+              <p>PokeReact</p>
+              <a class="proyects-button" href="https://github.com/SbleitZ/poketest-master">
                 <i class="bi bi-link"></i>
               </a>
             </div>
