up src imgproyect3

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           <article data-aos="fade-left"
           data-aos-offset="300"
           data-aos-easing="ease-in-sine" class="col-12 col-md-4 card-proyect">
-            <img class="card-proyect-img img-fluid" alt="icono del proyecto 3" src="./src/images/imagen-mantenimiento.jpg">
+            <img class="card-proyect-img img-fluid" alt="icono del proyecto 3" src="./src/images/proyecto3.jpg">
             <div class="card-proyect-item">
               <span>Web</span>
               <p>Proximamente</p>
