--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
           data-aos-easing="ease-in-sine" class="col-12 col-md-4 card-proyect">
             <img class="card-proyect-img img-fluid" alt="icono del proyecto 3" src="./src/images/proyecto3.jpg">
             <div class="card-proyect-item">
-              <span>Web</span>
-              <p>Proximamente</p>
-              <a class="proyects-button" href="#">
+              <span>API</span>
+              <p>API usando esas tres tecnologias...</p>
+              <a class="proyects-button" href="https://github.com/SbleitZ/API-nodejs-expressjs-mongodb">
                 <i class="bi bi-link"></i>
               </a>
             </div>
