--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <title>Rodrigo Palacios | Portafolio</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="-Jpym9ltndPKSK0UiWZi0Zuw2PEinNtetmgCwEpAEmQ" />
   <meta name="author" content="Rodrigo Palacios">
+  <meta property="og:title" content="Rodrigo Palacios | Portafolio">
+  <meta name="author" content="Rodrigo Palacios">
   <meta name="description" content="Portafolio de Rodrigo Palacios, que es un desarrollador web freelancer en busca de un trabajo!." >
-  <meta name="keywords" content="HTML, CSS, JavaScript, React, portafolio, fullstack, web developer">
+  <meta name="keywords" content="rodrigo palacios,sbleitz, sbleit, portafolio, fullstack, web developer, rodrigo palacios portafolio">
+  <meta property="og:description" content="Portafolio de Rodrigo Palacios, que es un desarrollador web freelancer en busca de un trabajo!." >
+  <meta property="og:url" content="https://portafolio-murex-theta.vercel.app">
+  
   <!-- CSS only -->
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
@@ -16,7 +22,6 @@
   <link href="./src/css/index.css" rel="stylesheet" type="text/css">
   <link href="./src/css/icons.css" rel="stylesheet" type="text/css">
   
-  <title>Rodrigo Palacios | Portafolio</title>
   <!-- Animacion scroll -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   
