--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="keywords" content="rodrigo palacios,sbleitz, sbleit, portafolio, fullstack, web developer, rodrigo palacios portafolio">
   <meta property="og:description" content="Portafolio de Rodrigo Palacios, que es un desarrollador web freelancer en busca de un trabajo!." >
   <meta property="og:url" content="https://portafolio-murex-theta.vercel.app">
+  <meta name="google-site-verification" content="fkHSTAGHWHe7uLn0smSbnmnDfT37kpljiwB9S1Etgx0" />
   
   <!-- CSS only -->
 
