--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:description" content="Portafolio de Rodrigo Palacios, que es un desarrollador web freelancer en busca de un trabajo!." >
   <meta property="og:url" content="https://portafolio-murex-theta.vercel.app">
   <meta name="google-site-verification" content="fkHSTAGHWHe7uLn0smSbnmnDfT37kpljiwB9S1Etgx0" />
-  <link rel="icon" type="image/png" href="./src/images/imagen_2022-12-31_143240839.png" sizes="16x16">
+  <link rel="icon" type="image/x-icon" href="./src/images/codificacion.png">
   
   <!-- CSS only -->
 
