--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="author" content="Rodrigo Palacios">
   <meta property="og:title" content="Rodrigo Palacios | Portafolio">
   <meta name="author" content="Rodrigo Palacios">
-  <meta name="description" content="Portafolio de Rodrigo Palacios, que es un desarrollador web freelancer en busca de un trabajo!." >
+  <meta name="description" content="Bienvenido a mi portafolio en línea. Aquí podrás conocer más detalladamente mis habilidades y capacidades, así como obtener una visión general de mis proyectos y logros personales. Soy un profesional altamente capacitado y comprometido con mi trabajo, y me esfuerzo por mantenerme actualizado en las últimas tendencias y tecnologías en mi campo. Si estás buscando a un profesional confiable y capaz para llevar a cabo tus proyectos, no dudes en ponerte en contacto conmigo. Estoy seguro de que podré ayudarte a alcanzar tus metas y objetivos de manera efectiva y eficiente. Gracias por visitar mi portafolio en línea.">
   <meta name="keywords" content="rodrigo palacios,sbleitz, sbleit, portafolio, fullstack, web developer, rodrigo palacios portafolio">
-  <meta property="og:description" content="Portafolio de Rodrigo Palacios, que es un desarrollador web freelancer en busca de un trabajo!." >
+  <meta property="og:description" content="Bienvenido a mi portafolio en línea. Aquí podrás conocer más detalladamente mis habilidades y capacidades, así como obtener una visión general de mis proyectos y logros personales. Soy un profesional altamente capacitado y comprometido con mi trabajo, y me esfuerzo por mantenerme actualizado en las últimas tendencias y tecnologías en mi campo. Si estás buscando a un profesional confiable y capaz para llevar a cabo tus proyectos, no dudes en ponerte en contacto conmigo. Estoy seguro de que podré ayudarte a alcanzar tus metas y objetivos de manera efectiva y eficiente. Gracias por visitar mi portafolio en línea.">
   <meta property="og:url" content="https://portafolio-murex-theta.vercel.app">
   <meta name="google-site-verification" content="fkHSTAGHWHe7uLn0smSbnmnDfT37kpljiwB9S1Etgx0" />
   <link rel="icon" type="image/x-icon" href="./src/images/codificacion.png">
