--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="author" content="Rodrigo Palacios">
   <meta property="og:title" content="Rodrigo Palacios | Portafolio">
   <meta name="author" content="Rodrigo Palacios">
-  <meta name="description" content="Soy un profesional altamente capacitado y comprometido con mi trabajo. En mi portafolio en línea puedes ver mis habilidades, capacidades, proyectos y logros personales. Me mantengo actualizado en las últimas tendencias y tecnologías en mi campo y soy un profesional confiable y capaz para llevar a cabo proyectos de manera efectiva y eficiente.">
+  <meta name="description" content="Soy un profesional altamente capacitado y comprometido con mi trabajo. Muestro mis habilidades, capacidades, proyectos y logros personales en mi portafolio.">
   <meta name="keywords" content="rodrigo palacios,sbleitz, sbleit, portafolio, fullstack, web developer, rodrigo palacios portafolio">
-  <meta property="og:description" content="Soy un profesional altamente capacitado y comprometido con mi trabajo. En mi portafolio en línea puedes ver mis habilidades, capacidades, proyectos y logros personales. Me mantengo actualizado en las últimas tendencias y tecnologías en mi campo y soy un profesional confiable y capaz para llevar a cabo proyectos de manera efectiva y eficiente.">
+  <meta property="og:description" content="Soy un profesional altamente capacitado y comprometido con mi trabajo. Muestro mis habilidades, capacidades, proyectos y logros personales en mi portafolio.">
   <meta property="og:url" content="https://portafolio-murex-theta.vercel.app">
   <meta name="google-site-verification" content="fkHSTAGHWHe7uLn0smSbnmnDfT37kpljiwB9S1Etgx0" />
   <link rel="icon" type="image/x-icon" href="./src/images/codificacion.png">
