--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta property="og:url" content="https://portafolio-murex-theta.vercel.app">
   <meta name="google-site-verification" content="fkHSTAGHWHe7uLn0smSbnmnDfT37kpljiwB9S1Etgx0" />
   <link rel="icon" type="image/x-icon" href="./src/images/codificacion.png">
+  <meta name="robots" content="index">
   
   <!-- CSS only -->
 
