--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
       </ul>
     </div>
     <p class="footer-autor d-flex justify-content-center">Pagina creada por Rodrigo Palacios</p>
+    <a class="footer-autor d-flex justify-content-center" href="https://github.com/SbleitZ/portafolio">Repositorio</a>
       <!-- <p>Construido por Rodrigo Palacios</p> -->
   </footer>
   
