--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse navegador" id="navbar-portafolio">
-          <a class="navbar-brand" href="#">Bienvenido!</a>
+          <a class="navbar-brand" href="https://sbleit.net/">Bienvenido!</a>
           <ul class="navbar-nav" >
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="#proyectos">Proyectos</a>
