--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </li>
             <li class="nav-item">
               <!-- <a href="./pages/curriculum_rodrigo.pdf">abrir</a> -->
-              <a class="nav-link" href="./src/pages/curriculum_rodrigo_actualizado.pdf" target="_blank">Descargar CV</a>
+              <a class="nav-link" href="https://drive.google.com/file/d/1LnFHbPehyhtXyvdpzY5gzLdIK-RxKUal/view?usp=share_link" target="_blank">Ver mi CV</a>
             </li>
           </ul>
         </div>
